# optimization

./: .travis.yml  README.markdown  Test.hs  foo.cabal  optimization.cabal
src/Optimization/: LineSearch.hs
src/Optimization/Constrained/: Penalty.hs  ProjectedSubgradient.hs
src/Optimization/LineSearch/: BFGS.hs  BarzilaiBorwein.hs  ConjugateGradient.hs  MirrorDescent.hs  SteepestDescent.hs
src/Optimization/TrustRegion/: Fista.hs  Nesterov1983.hs  Newton.hs
tests/: doctests.hsc
