name:          optimization
category:      Math
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Ben Gamari
maintainer:    Ben Gamari <bgamari@gmail.com>
stability:     experimental
homepage:      http://github.com/bgamari/optimization
bug-reports:   http://github.com/ekmett/optimization/issues
copyright:     Copyright (C) 2013 Ben Gamari
synopsis:      Numerical optimization
description:   foo
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/bgamari/optimization.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-type-defaults
  build-depends:
    base                >= 4.4          && < 5,
    linear              >= 1.0          && < 2.0,
    semigroupoids       >= 3.0          && < 4.0,
    distributive        >= 0.3          && < 0.4

  exposed-modules:
    Optimization.LineSearch
    Optimization.LineSearch.ConjugateGradient
    Optimization.LineSearch.BarzilaiBorwein
    Optimization.LineSearch.SteepestDescent
    Optimization.TrustRegion.Nesterov1983
    Optimization.TrustRegion.Fista
    Optimization.TrustRegion.Newton


test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
