name:          optimization
category:      Math
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Ben Gamari
maintainer:    Ben Gamari <bgamari@gmail.com>
stability:     experimental
homepage:      http://github.com/bgamari/optimization
bug-reports:   http://github.com/ekmett/optimization/issues
copyright:     Copyright (C) 2013 Ben Gamari
synopsis:      Numerical optimization
description:
  These are a set of implementations of various numerical optimization
  methods in Haskell. Note that these implementations were originally
  written as part of a class project; while at one point they worked
  no attention has been given to numerical stability or the many other
  potential difficulties of implementing robust numerical
  methods. That being said, they should serve to succinctly illustrate
  a number of optimization techniques from the modern optimization
  literature.

  Those seeking a high-level overview of some of these methods are
  referred to Stephen Wright's excellent tutorial from NIPS 2010
  <http://videolectures.net/nips2010_wright_oaml/>. A deeper
  introduction can be found in Boyd and Vandenberghe's *Complex
  Optimization* which available freely online.

build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/bgamari/optimization.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-type-defaults
  build-depends:
    base                >= 4.4          && < 5,
    linear              >= 1.0          && < 2.0,
    semigroupoids       >= 3.0          && < 4.0,
    distributive        >= 0.3          && < 0.4

  exposed-modules:
    Optimization.LineSearch
    Optimization.LineSearch.ConjugateGradient
    Optimization.LineSearch.BarzilaiBorwein
    Optimization.LineSearch.SteepestDescent
    Optimization.TrustRegion.Nesterov1983
    Optimization.TrustRegion.Fista
    Optimization.TrustRegion.Newton


test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
